# Topstep_quant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compile_python_files.py  docker-compose.yml  prometheus.yml  pyproject.toml  run_bot.py
.github/workflows/: ci.yml
config/: default_settings.yaml  schema.json
tests/: __init__.py  conftest.py  test_config.py  test_coordinator.py  test_end_to_end.py  test_risk_manager.py  test_strategies.py
topstep_quant/: __init__.py  bot.py
topstep_quant/execution/: __init__.py  coordinator.py
topstep_quant/infrastructure/: __init__.py  broker.py  config.py  dummy_broker.py  rithmic_api.py  tradovate_api.py
topstep_quant/monitoring/: __init__.py  alerts.py  logger.py
topstep_quant/risk/: __init__.py  kill_switch.py  risk_manager.py
topstep_quant/strategies/: __init__.py  base.py  intraday_mean_revert.py  microstructure_mm.py  tail_hedge.py  trend_follow.py
topstep_quant/utils/: __init__.py  kalman.py  math_tools.py
